# advent2021

./: Makefile  README.md  advent2021.cabal  cabal.project  days.sh
data/: day22.input
data/Advent01/: puzzle.md
data/Advent02/: puzzle.md
data/Advent03/: puzzle.md
data/Advent04/: puzzle.md
data/Advent05/: puzzle.md
data/Advent06/: puzzle.md
data/Advent07/: puzzle.md
data/Advent08/: puzzle.md
data/Advent09/: puzzle.md
data/Advent10/: puzzle.md
data/Advent11/: puzzle.md
data/Advent12/: puzzle.md
data/Advent13/: puzzle.md
data/Advent14/: puzzle.md
data/Advent15/: puzzle.md
data/Advent16/: puzzle.md
data/Advent17/: puzzle.md
data/Advent18/: puzzle.md
data/Advent19/: puzzle.md
data/Advent20/: puzzle.md
data/Advent21/: puzzle.md
data/Advent22/: puzzle.md
src/: AStar.hs  Advent01.hs  Advent01b.hs  Advent02.hs  Advent03.hs  Advent04.hs  Advent05.hs  Advent06.hs  Advent07.hs  Advent08.hs  Advent09.hs  Advent10.hs  Advent11.hs  Advent12.hs  Advent13.hs  Advent14.hs  Advent15.hs  Advent16.hs  Advent17.hs  Advent18.hs  Advent19.hs  Advent20.hs  Advent21.hs  Advent21b.hs  Advent21x.hs  Advent22.hs  Advent22BCuboids.hs  Advent22b.hs  Advent23.hs  Main.hs  Utils.hs
