cabal-version:       >=1.10

name:                advent2021
version:             0.1.0.0
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          lyndon@sordina.net
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable advent2021
  main-is:             Main.hs
  other-modules:
    Advent01
    Advent01b
  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:
    DerivingStrategies
    TypeApplications
    ApplicativeDo
    BlockArguments
    ViewPatterns

  build-depends:
    base >=4.14 && <4.15,
    containers,
    lens-regex-pcre,
    text,
    lens,
    split,
    mtl,
    array,
    arithmoi,
    parsec,
    vector,
    parser-combinators,
    template-haskell
